<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/light_gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/scroll_view_bottom">

            <FrameLayout
                android:id="@+id/appForumLogoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/margin_default">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:elevation="@dimen/elevation_default"
                    android:scaleType="centerCrop"
                    android:src="@drawable/appforumlogo" />

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/zebraHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:background="@android:color/white"
                android:elevation="@dimen/elevation_default"
                android:padding="@dimen/margin_default">

                <ImageView
                    android:id="@+id/zebraLogo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="true"
                    android:src="@drawable/zebralogo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_toRightOf="@+id/zebraLogo"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zebra_technologies_corp"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zebra_address_line_1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zebra_address_line_2"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/printerSelectionStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/no_printer_selected"
                    android:textStyle="bold" />

                <TableLayout
                    android:id="@+id/printerInfoTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:visibility="gone">

                    <TableRow>

                        <TextView
                            android:paddingRight="@dimen/margin_default"
                            android:text="@string/printer_name"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/printerInfoTableName"
                            android:text="(Printer name)" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:paddingRight="@dimen/margin_default"
                            android:text="@string/printer_address"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/printerInfoTableAddress"
                            android:text="(Printer address)" />

                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/discoverPrintersButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/zebra_blue"
                    android:elevation="@dimen/elevation_default"
                    android:gravity="center"
                    android:padding="@dimen/margin_default"
                    android:text="@string/connect"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/button_database"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/near_black"
                    android:elevation="@dimen/elevation_default"
                    android:gravity="center"
                    android:padding="@dimen/margin_default"
                    android:text="Reset RFID_List"
                    android:textColor="@android:color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:background="@android:color/white"
                android:elevation="@dimen/elevation_default"
                android:orientation="vertical"
                android:padding="@dimen/margin_default">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/zebra_blue"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small">

                    <ListView
                        android:id="@+id/listView1"
                        android:layout_width="600dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"></ListView>

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
